# libscd4x

./: CMakeLists.txt  README.md
lib/: scd4x.cmake
lib/scd4x/: device.h  scd4x.h
lib/source/: scd4x.c
